@@ -48,3 +48,10 @@ Feature: Select List
     When I select "Test 2" from the select list
     Then the selected option should be "Test 2"
 
+  Scenario: Determining if a select list includes some option
+    Then the select list should include "Test 2"
+
+  Scenario: It should know if an option is selected
+    When I select "Test 2" from the select list
+    Then the select list should know that "Test 2" is selected
+
