@@ -35,6 +35,25 @@ module PageObject
           find_options.map { |e| e.text if e.selected? }.compact
         end
 
+        #
+        # Returns true if the select list has one or more options where text or label matches the given value.
+        #
+        # @param [String, Regexp] value A value.
+        # @return [Boolean]
+        def include?(value)
+          find_options.any? { |e| e.text == value }
+        end
+
+        #
+        # Returns true if any of the selected options' text match the given value.
+        #
+        # @param [String, Regexp] value A value.
+        # @return [Boolean]
+        def selected?(value)
+          selected = find_options.select { |e| e if e.selected? }
+          selected.any? { |e| e.text == value }
+        end
+
         private
 
         def find_options
