@@ -41,8 +41,24 @@ module PageObject
           @element.selected_options
         end
 
+        #
+        # Returns true if the select list has one or more options where text or label matches the given value.
+        #
+        # @param [String, Regexp] value A value.
+        # @return [Boolean]
+        def include?(value)
+          @element.include? value
+        end
+        
+        #
+        # Returns true if any of the selected options' text or label match the given value.
+        #
+        # @param [String, Regexp] value A value.
+        # @return [Boolean]
+        def selected?(value)
+          @element.selected? value
+        end
       end
     end
   end
-
 end
